<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:background="@drawable/bg_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rvTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="end">

        <ImageView
            android:id="@+id/ivHome"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:layout_toStartOf="@+id/ivSetting"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/image" />

        <ImageView
            android:id="@+id/ivSetting"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toStartOf="@+id/ivMenu"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_setting" />

        <ImageView
            android:id="@+id/ivMenu"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="5dp"
            android:src="@drawable/ic_menu"
            android:contentDescription="@string/image" />
    </RelativeLayout>


    <RelativeLayout
        android:layout_above="@+id/adView"
        android:layout_below="@+id/rvTop"
        android:layout_marginStart="80dp"
        android:layout_marginEnd="80dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerHorizontal="true"
        android:background="@drawable/silghtly_curved_corners">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_md">

            <TextView
                android:id="@+id/tvFaq"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/padding_md"
                android:text="@string/about_des"
                android:textColor="@color/teal_200"
                android:textSize="@dimen/text_size_lg" />

        </ScrollView>
    </RelativeLayout>
    <com.google.android.gms.ads.AdView
        xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_id"/>

</RelativeLayout>